子模块放入根目录下

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "docs/01.前端/04.Webpack/codes"]
 	path = docs/01.前端/04.Webpack/codes
 	url = git@github.com:Lemonnnnnnnnnnn/webpack-demos-pro.git
+[submodule "codes/webpack-demos-pro"]
+	path = codes/webpack-demos-pro
+	url = git@github.com:Lemonnnnnnnnnnn/webpack-demos-pro.git
