--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,12 +16,8 @@ jobs:
     #切换分支
     - name: checkout
       uses: actions/checkout@master
-    
-    # 更新子模块
-    - name: submodules-init
-      # You may pin to the exact commit or the version.
-      # uses: snickerbockers/submodules-init@74927a8bb0fe1bb0f1f1e4d102384a8e69f19171
-      uses: snickerbockers/submodules-init@v4
+      with: 
+        submodules: recursive
 
     - name: Install Dependencies
       run : yarn 
