--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,15 +24,28 @@ jobs:
 
     - name : Build
       run : yarn build
+
+    # Deploy
+    - name: Deploy
+      uses: easingthemes/ssh-deploy@v2.0.7
+      env:
+        SSH_PRIVATE_KEY: ${{ secrets.ACCESS_TOKEN }}
+        SOURCE: "dist/"
+        REMOTE_HOST: ${{ secrets.HOST }}
+        REMOTE_USER: ${{ secrets.USER }}
+        TARGET: "/var/www/html/"
     
-    - name: 上传文件到远程服务器
-      uses: zhenyuWang/Upload-File-Action@v1.0.1
-      with:
-          username: ${{ secrets.USER }}
-          server: ${{ secrets.HOST }}
-          port: "22"
-          ssh_private_key: ${{ secrets.ACCESS_TOKEN }}
-          # 要上传文件所在目录
-          local_path: "./dist/*"
-          # 远程服务器目标路径
-          target_path: "/var/www/html/"
+    # - name: 上传文件到远程服务器
+    #   uses: zhenyuWang/Upload-File-Action@v1.0.1
+    #   with:
+    #       username: ${{ secrets.USER }}
+    #       server: ${{ secrets.HOST }}
+    #       port: "22"
+    #       ssh_private_key: ${{ secrets.ACCESS_TOKEN }}
+    #       # 要上传文件所在目录
+    #       local_path: "./dist/*"
+    #       # 远程服务器目标路径
+    #       target_path: "/var/www/html/"
+
+
+
