--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,8 +27,8 @@ jobs:
 
     # Deploy
     - name: Deploy
-      uses: easingthemes/ssh-deploy@v2.0.7
-      env:
+      uses: easingthemes/ssh-deploy@v2.2.11
+      with:
         SSH_PRIVATE_KEY: ${{ secrets.ACCESS_TOKEN }}
         SOURCE: "dist/"
         REMOTE_HOST: ${{ secrets.HOST }}
