--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,7 +30,7 @@ jobs:
       uses: easingthemes/ssh-deploy@v2.2.11
       with:
         SSH_PRIVATE_KEY: ${{ secrets.ACCESS_TOKEN }}
-        SOURCE: "dist/"
+        SOURCE: "docs/.vuepress/dist/"
         REMOTE_HOST: "101.35.18.131"
         REMOTE_USER: "ubuntu"
         ARGS: "-rltgoDzvO --delete"
