--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "codes/swr"]
 	path = codes/swr
 	url = git@github.com:Lemonnnnnnnnnnn/swr.git
+[submodule "codes/vue-demo"]
+	path = codes/vue-demo
+	url = git@github.com:Lemonnnnnnnnnnn/vue-demo.git
