--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "codes/react-demo"]
 	path = codes/react-demo
 	url = git@github.com:Lemonnnnnnnnnnn/react-demo.git
+[submodule "codes/python-demo"]
+	path = codes/python-demo
+	url = git@github.com:Lemonnnnnnnnnnn/python-demo.git
