--- a/codes/pinia-demo/package.json
+++ b/codes/pinia-demo/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "pinia": "^2.0.14",
     "vue": "^3.2.25"
   },
