--- a/.github/workflows/baiduPush.yml
+++ b/.github/workflows/baiduPush.yml
@@ -16,7 +16,7 @@ jobs:
   bot:
     runs-on: ubuntu-latest # 运行环境为最新版的Ubuntu
     steps:
-      - name: 'Checkout codes' # 步骤一，获取仓库代码
-        uses: actions/checkout@v1
+      - name: checkout
+        uses: actions/checkout@master
       - name: 'Run baiduPush' # 步骤二，执行sh命令文件
         run: npm install && npm run baiduPush # 运行目录是仓库根目录
