--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "vuepress build docs",
     "deploy": "bash deploy.sh",
     "editFm": "node utils/editFrontmatter.js",
-    "baiduPush": "node utils/baiduPush.js https://xugaoyi.com && bash baiduPush.sh"
+    "baiduPush": "node utils/baiduPush.js https://www.linyuchen.cloud && bash baiduPush.sh"
   },
   "license": "MIT",
   "devDependencies": {
@@ -24,12 +24,11 @@
     "vuepress-plugin-fulltext-search": "^2.2.1",
     "vuepress-plugin-one-click-copy": "^1.0.2",
     "vuepress-plugin-ribbon": "^1.1.2",
+    "vuepress-plugin-smooth-scroll": "^0.0.10",
     "vuepress-plugin-thirdparty-search": "^1.0.2",
     "vuepress-plugin-zooming": "^1.1.7",
     "vuepress-theme-vdoing": "^1.10.1",
-    "yamljs": "^0.3.0"
-  },
-  "dependencies": {
+    "yamljs": "^0.3.0",
     "vuepress-plugin-sitemap": "^2.3.1"
   }
 }
