--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "vuepress build docs",
     "deploy": "bash deploy.sh",
     "editFm": "node utils/editFrontmatter.js",
-    "baiduPush": "node utils/baiduPush.js https://www.linyuchen.cloud && bash baiduPush.sh"
+    "baiduPush": "node utils/baiduPush.js https://www.linyuchen.cloud && bash baiduPush.sh",
+    "bingPush": "node utils/bingPush.js"
   },
   "license": "MIT",
   "devDependencies": {
