--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "codes/c-demo"]
 	path = codes/c-demo
 	url = git@github.com:Lemonnnnnnnnnnn/c-demo.git
+[submodule "codes/typeScript-demo"]
+	path = codes/typeScript-demo
+	url = git@github.com:Lemonnnnnnnnnnn/typeScript-demo.git
